# PancakeMusicBox

./: LICENCE  License_KR  README.md  build.gradle.kts  download_oboe.sh  gradle.properties  other_library_list  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/pancakemusicbox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioPlayer.cpp  AudioScanner.cpp  CMakeLists.txt  JNIBridge.cpp  native-lib.cpp
app/src/main/cpp/include/: AudioEngine.h  AudioMetadata.h  AudioPlayer.h  AudioScanner.h  JNIBridge.h
app/src/main/cpp/oboe/: CMakeLists.txt
app/src/main/cpp/oboe/include/oboe/: Oboe.h
app/src/main/cpp/oboe/src/: dummy.cpp
app/src/main/java/com/example/pancakemusicbox/: HiFiPlayerApplication.kt  MainActivity.kt
app/src/main/java/com/example/pancakemusicbox/audio/: AudioPlayerManager.kt  AudioPlayerNative.kt  AudioScannerNative.java
app/src/main/java/com/example/pancakemusicbox/data/: SampleData.kt
app/src/main/java/com/example/pancakemusicbox/model/: Album.kt  AudioData.kt  AudioQuality.kt  Playlist.kt  Track.kt
app/src/main/java/com/example/pancakemusicbox/navigation/: Screen.kt
app/src/main/java/com/example/pancakemusicbox/repository/: MusicRepository.java.bak  MusicRepository.kt
app/src/main/java/com/example/pancakemusicbox/ui/: HiFiPlayerApp.kt
app/src/main/java/com/example/pancakemusicbox/utils/: FormatUtils.kt  TimeFormatter.kt  TimeUtils.kt.bak
app/src/main/java/com/example/pancakemusicbox/viewmodel/: AudioPlayerViewModel.kt  MusicViewModel.java
app/src/main/res/drawable/: ic_add.xml  ic_attach_file.xml  ic_equalizer.xml  ic_folder.xml  ic_library.xml  ic_next.xml  ic_placeholder.xml  ic_playing.xml  ic_previous.xml  ic_repeat.xml  ic_settings.xml  ic_toggle_off.xml  ic_toggle_on.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/pancakemusicbox/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+26 files in other folders)
